# SB_Utils

./: .gitignore  .gitlab-ci.yml  ReadMe.md  __init__.py  orig.gitlab-ci.yml  requirements.txt  setup.py
root/: requirements.txt  setup.cfg  setup.py
root/sb_utils/: __init__.py  amqp_tools.py  auth.py  etcd_cache.py  ext_dicts.py  general.py  message_obj.py  utils.py
root/sb_utils/message/: __init__.py  enums.py  message.py  serialize.py
root/sb_utils/message/signature/: __init__.py  json_signature.py
root/sb_utils/serialize/: enums.py  helpers.py  serialize.py
root/sb_utils/serialize/pysmile/: __init__.py  decode.py
root/tests/: test_messageFormat.py  test_messageSignature.py  utils.py
root/tests/formats/: request.cbor  request.json  response.cbor  response.json
root/tests/messages/input/good/request/language/: allow_device_deviceid.json  allow_file_hashes_sha256.json  allow_ipv4net.json  allow_ipv4net_cidr.json  allow_ipv6net.json  allow_ipv6net_ipv4mapped_orig.json  allow_ipv6net_ipv4mapped_result.json  allow_ipv6net_localhost.json  allow_ipv6net_localhost_reduced.json  allow_ipv6net_prefix.json  allow_ipv6net_unspecified.json  allow_ipv6net_unspecified_reduced.json  allow_ipv6net_wikipedia1.json  allow_ipv6net_wikipedia10_eui64.json  allow_ipv6net_wikipedia11_derrick.json  allow_ipv6net_wikipedia2.json  allow_ipv6net_wikipedia3.json  allow_ipv6net_wikipedia4.json  allow_ipv6net_wikipedia4_shortened.json  (+64 more)
root/tests/messages/input/good/request/language-anything/: create_poetry.json
root/tests/messages/input/good/response/: query_features.json
(+346 files in other folders)
