[bdist_wheel]
universal=1

[metadata]
  name = sb_utils
  version = 0.3.1
  description = ScreamingBunny Utils
  # long_description = file: ReadMe.md
  # long_description_content_type="text/markdown"
  platform = any
  classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: Utility :: Translation
    Topic :: Utility :: AMQP

[options]
  include_package_data = true
  python_requires= >=2.7, !=3.[1-5], <4
  setup_requires = setuptools_scm
